# privacyanalyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
config/: config.example.yaml  custom_patterns.yaml
config/rules/: gdpr_rules.yaml
examples/: EXAMPLES.md  README.md  sample_document.txt
src/: __init__.py
src/analyzers/: __init__.py  base.py  batch_analyzer.py  database_analyzer.py  document_analyzer.py  web_analyzer.py
src/anonymizers/: __init__.py  anonymizer.py
src/api/: __init__.py  server.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  container.py  dependencies.py
src/detectors/: __init__.py  eu_patterns.py  gdpr_engine.py  pii_detector.py
src/events/: __init__.py  bus.py  events.py  handlers.py
src/llm/: __init__.py  analyzer.py  claude_client.py  prompts.py
src/models/: __init__.py  config.py  finding.py
src/plugins/: __init__.py  analyzer_plugin.py  base.py  detector_plugin.py  manager.py
src/processors/: __init__.py  document_processor.py  email_processor.py  excel_processor.py  web_processor.py
src/reporters/: __init__.py  csv_reporter.py  html_reporter.py  pdf_reporter.py
src/utils/: __init__.py  audit_logger.py  comparator.py  logger.py
tests/: __init__.py  conftest.py  test_anonymizer.py  test_api.py  test_audit_logger.py  test_batch_analyzer.py  test_comparator.py  test_container.py  test_database_analyzer.py  test_document_analyzer.py  test_eu_patterns.py  test_event_bus.py  test_gdpr_engine.py  test_pii_detector.py  test_plugin_manager.py  test_reporters.py  test_web_processor.py
